refactor: postman updated